# operator-inference-cuda

./: .gitignore  CMakeLists.txt  LICENSE  gpu_timer.h  linear_algebra.cuh  linear_algebra_kernels.cuh
operator-inference-cuda/: CMakeLists.txt  CudaGpuMatrix.h  CudaGpuVector.cpp  CudaGpuVector.h  CudaLibraries.h  CudaMatrix.cpp  CudaMatrix.h  Ddt.cuh  GpuTimer.h  Heat1D.cu  Heat1D.cuh  LinearAlgebra.cu  LinearAlgebra.cuh  LinearAlgebraKernels.cu  OperatorInference.cu  OperatorInference.cuh  TestingConfig.h  TestingConfig.h.in  cuda_gpu_matrix.h  cuda_gpu_vector.cpp  cuda_gpu_vector.h  cuda_host_matrix.cpp  cuda_host_matrix.h  heat_1d.cu  heat_1d.cuh  linear_algebra.cu  linear_algebra_kernels.cu  main.cu  operator_inference.cuh  utilities.cpp  utilities.h
operator-inference-cuda/include/: cuda_gpu_matrix.h  cuda_gpu_vector.h  cuda_host_matrix.h  cuda_libraries.h  cuda_random.h  linear_algebra.cuh  linear_algebra_kernels.cuh  operator_inference.cuh  utilities.h
operator-inference-cuda/src/: cuda_gpu_vector.cpp  cuda_host_matrix.cpp  cuda_random.cpp  heat_1d.cu  linear_algebra.cu  linear_algebra_kernels.cu  main.cu  utilities.cpp
operator-inference-cuda/tests/: linear_algebra_test.cpp  test_utilities.cpp  test_utilities.h
operator-inference-cuda/tests/baselines/: add_vectors_4.txt  add_vectors_5.txt  column_normalize_1.txt  column_normalize_2.txt  concatenate_1.txt  concatenate_2.txt  concatenate_3.txt  concatenate_4.txt  find_column_maxes_1.txt  find_column_maxes_2.txt  get_matrix_squared_1.txt  get_matrix_squared_2.txt  get_matrix_squared_3.txt  linear_algebra_subset_subset1_1.txt  linear_algebra_subset_subset1_2.txt  linear_algebra_subset_subset1_3.txt  linear_algebra_subset_subset1_4.txt  linear_algebra_subset_subset2_1.txt  linear_algebra_subset_subset2_2.txt  linear_algebra_subset_subset2_3.txt  linear_algebra_subset_subset2_4.txt  linear_algebra_subsetsubset2_reference_nonbaseline.txt  linear_algebra_transpose_matrixAns.txt  linear_algebra_transpose_matrixAnsT2.txt  multiply_matrices_1.txt  multiply_matrices_2.txt  multiply_matrices_3.txt
operator-inference-cuda/tests/inputs/: add_vectors_1_1.txt  add_vectors_1_2.txt  multiply_matrices_1.txt  multiply_matrices_2.txt
